--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1256,7 +1256,7 @@ img {
 
 /* Default cursor style for all devices */
 body {
-  cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><text x="0" y="20" font-size="20" fill="black">💛</text></svg>') 16 16, auto;
+  cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><text x="0" y="20" font-size="20" fill="black">⚡</text></svg>') 16 16, auto;
   /* Indian flag emoji as cursor */
 
 }
@@ -1307,7 +1307,7 @@ body.cursor-active {
 
   body.cursor-active {
 
-    cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><text x="0" y="20" font-size="20" fill="black">💛</text></svg>') 16 16, auto;
+    cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><text x="0" y="20" font-size="20" fill="black">⚡</text></svg>') 16 16, auto;
     /* Use the emoji cursor on mobile */
 
   }
